Add new plugin for lombok Complier